# hackathons

./: .env.example  .gitignore  CLAUDE.md  README.md
agents/buyer-simple-agent/: .bedrock_agentcore.yaml.example  .env.example  README.md  pyproject.toml
agents/buyer-simple-agent/frontend/: index.html  package-lock.json  package.json
agents/buyer-simple-agent/frontend/src/: App.tsx  api.ts  globals.css
agents/buyer-simple-agent/src/: agent.py  agent_agentcore.py  budget.py  client.py  client_a2a.py  demo.py  log.py  registration_server.py  registry.py  strands_agent.py  web.py
agents/buyer-simple-agent/src/tools/: balance.py  discover.py  discover_a2a.py  purchase.py  (+2 more)
agents/buyer-simple-agent/ts/: package-lock.json  package.json
agents/mcp-server-agent/: .env.example  README.md  pyproject.toml
agents/mcp-server-agent/src/: client.py  server.py  setup.py
agents/mcp-server-agent/src/tools/: market_research.py  summarize.py
agents/seller-simple-agent/: .bedrock_agentcore.yaml.example  .env.example  README.md  pyproject.toml
agents/seller-simple-agent/src/: agent.py  agent_a2a.py  client.py  observability.py  strands_agent.py  strands_agent_plain.py
agents/seller-simple-agent/src/tools/: market_research.py  summarize.py
agents/seller-simple-agent/ts/: package-lock.json  package.json
agents/seller-simple-agent/ts/src/: client.ts  demo.ts  server.ts
agents/strands-simple-agent/: .env.example  README.md  agent.py  demo.py  pyproject.toml
aws-integration/agentcore-deployment/: README.md
aws-integration/strands-nevermined/: README.md
demo-scripts/: demo-cli.md  demo-frontend.md
docs/: aws-integration.md  deploy-to-agentcore.md  getting-started.md  nevermined-talks.md
docs/tracks/: track-1-data-marketplace.md  track-2-internal-a2a.md  track-3-content-marketplace.md  track-4-open.md
scripts/: deploy-agentcore.sh  test-agentcore.sh
starter-kits/kit-a-buyer-agent/: README.md
starter-kits/kit-b-selling-agent/: README.md
starter-kits/kit-b-selling-agent/python/: .env.example  pyproject.toml
starter-kits/kit-c-switching-agent/: README.md
starter-kits/kit-d-publisher-agent/: README.md
starter-kits/kit-e-consuming-agent/: README.md
starter-kits/kit-f-quality-assessment/: README.md
starter-kits/kit-g-requesting-agent/: README.md
starter-kits/kit-h-servicing-agent/: README.md
starter-kits/kit-i-roi-governor/: README.md
starter-kits/shared/: README.md
workshops/openclaw-docker/: CLAUDE.md  Dockerfile  docker-compose.yml  entrypoint-buyer.sh  entrypoint.sh  openclaw-buyer.json  openclaw.json  patch-handler.js
(+16 files in other folders)
