[tool.poetry]
name = "strands-simple-agent"
version = "0.1.0"
description = "Strands AI agent with Nevermined x402 payment protection"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
strands-agents = {version = ">=1.0.0", extras = ["openai"]}
strands-agents-builder = ">=0.1.0"
payments-py = {version = ">=1.1.0", extras = ["strands"]}
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
agent = "agent:main"
demo = "demo:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
